test/cinn/ops/test/test_conv2d_op.out
  File "test_conv2d_op.py", line 37
    )from op_test import OpTest, OpTestTool, is_compile_with_device
     ^
SyntaxError: invalid syntax
